--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.21",
     "vue": "^3.2.13",
     "vue-router": "^4.3.2",
+    "vue-toast-notification": "^3.1.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
